--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div class="task02 bound">
+	<div class="task02">
 		<b class="task02-external">External</b>
 		<b class="task02-internal">Internal</b>
 		<!-- inline-описание (используется атрибут style выбранного вами элемента); -->
