--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
 	<title>itech-05-lb02</title>
 	<!-- с помощью контейнера style в секции заголовка; -->
 	<style>
+		.task02-internal {
+			color: rgb(30, 200, 90);
+		}
 	</style>
 	<!-- подключить стилевую таблицу, расположенную во внешнем CSS-файле. -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<div class="task02 bound">
+		<b class="task02-external">External</b>
+		<b class="task02-internal">Internal</b>
+		<!-- inline-описание (используется атрибут style выбранного вами элемента); -->
+		<b class="task02-inline" style="color: #20e">Inline</b>
+	</span>
 </body>
 </html>
