--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
 		<b class="task02-internal">Internal</b>
 		<!-- inline-описание (используется атрибут style выбранного вами элемента); -->
 		<b class="task02-inline" style="color: #20e">Inline</b>
-	</span>
+	</div>
+	<br>
+	<div class="task03">
+		<p class="id03">(1) This string must have a shadow [class="id03"]</p>
+		<p id="id03">(2) This string must have another shadow [id="id03"]</p>
+		<p id="id03" class="id03">(3) This string must have the shadow of (1) [class="id03", id="id03"]</p>
+		<b class="agent003">This string (4) must have (#389) teal color [class|="agent003"]. Also strings 4-6 must have big maroon-colored first letters.</b>
+		<b class="agent003-wavy">(5) This string must have wavy line under it (#836) [class="agent003-wavy"]</b>
+		<b class="agent003_underlined">"This string (6) must be dashed & underlined, but not have teal color [class="agent003_underlined"]"</b>
+	</div>
 </body>
 </html>
