--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 <body>
 	<div class="task02">
-		<b class="task02-external">External</b>
-		<b class="task02-internal">Internal</b>
+		<b class="task02-external">This string must be yellow (from style.css)</b>
+		<b class="task02-internal">This string must be green (from &lt;style&gt;)</b>
 		<!-- inline-описание (используется атрибут style выбранного вами элемента); -->
-		<b class="task02-inline" style="color: #20e">Inline</b>
+		<b class="task02-inline" style="color: #20e">This string must be blue (inline)</b>
 	</div>
 	<br>
 	<div class="task03">
