Task04: add container

--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
 		<b class="agent003-wavy">(5) This string must have wavy line under it (#836) [class="agent003-wavy"]</b>
 		<b class="agent003_underlined">"This string (6) must be dashed & underlined, but not have teal color [class="agent003_underlined"]"</b>
 	</div>
+	<br>
+	<div class="task04">
+		<div class="pos nobound">
+		</div>
+	</div>
 </body>
 </html>
