--- a/index.html
+++ b/index.html
@@ -30,8 +30,21 @@
 	</div>
 	<br>
 	<div class="task04">
-		<div class="pos nobound">
-		</div>
+		<div class="task04-block nobound task04-pos-sticky"/>1</div>
+		<div class="task04-block nobound"/>a</div>
+		<div class="task04-block nobound"/>b</div>
+		<div class="task04-block nobound"/>c</div>
+		<div class="task04-block nobound"/>d</div>
+		<div class="task04-block nobound task04-pos-sticky"/>2</div>
+		<div class="task04-block nobound"/>a</div>
+		<div class="task04-block nobound task04-pos-relative"/>Relative. Notice the z-order.</div>
+		<div class="task04-block nobound task04-pos-sticky"/>3</div>
+		<div class="task04-block nobound"/>a</div>
+		<div class="task04-block nobound"/>b</div>
+		<div class="task04-block nobound"/>c</div>
+		<div class="task04-block nobound"/>d</div>
+		<div class="task04-block nobound task04-pos-fixed"/>&nbsp;</div>
+		<div class="task04-block nobound task04-pos-absolute"/>&nbsp;</div>
 	</div>
 </body>
 </html>
