--- a/index.html
+++ b/index.html
@@ -46,5 +46,17 @@
 		<div class="task04-block nobound task04-pos-fixed"/>&nbsp;</div>
 		<div class="task04-block nobound task04-pos-absolute"/>&nbsp;</div>
 	</div>
+
+	<br>
+	<div class="task06">
+		<div class="nobound"><b>Task06, variant 02</b></div>
+		<div class="task06-01">
+			<p>Color picker</p>
+			<p>Move</p>
+			<p>Location</p>
+			<p>Vertical text</p>
+		</ul>
+		
+	</div>
 </body>
 </html>
