--- a/index.html
+++ b/index.html
@@ -50,13 +50,22 @@
 	<br>
 	<div class="task06">
 		<div class="nobound"><b>Task06, variant 02</b></div>
-		<div class="task06-01">
+		<!-- Добавить на страницу список с собственным маркером (изображение, символ или сгенерированное средствами CSS). -->
+		<div class="task06-01" style="padding: .3rem">
 			<p>Color picker</p>
 			<p>Move</p>
 			<p>Location</p>
 			<p>Vertical text</p>
-		</ul>
-		
+		</div>
+		<!-- Добавить на страницу контейнер с элементами, размещенными согласно рисунку. Использовать Flexbox. -->
+		<div class="task06-02">
+			<div class="nobound"></div>
+			<div class="nobound task06-02-long"></div>
+			<div class="nobound"></div>
+			<div class="nobound"></div>
+			<div class="nobound"></div>
+			<div class="nobound"></div>
+		</div>
 	</div>
 </body>
 </html>
