--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 		<p class="id03">(1) This string must have a shadow [class="id03"]</p>
 		<p id="id03">(2) This string must have another shadow [id="id03"]</p>
 		<p id="id03" class="id03">(3) This string must have the shadow of (1) [class="id03", id="id03"]</p>
-		<b class="agent003">This string (4) must have (#389) teal color [class|="agent003"]. Also strings 4-6 must have big maroon-colored first letters.</b>
-		<b class="agent003-wavy">(5) This string must have wavy line under it (#836) [class="agent003-wavy"]</b>
-		<b class="agent003_underlined">"This string (6) must be dashed & underlined, but not have teal color [class="agent003_underlined"]"</b>
+		<b class="agent003">This string (4) must have (#389) teal color [class|="agent003"]. Also strings 4-6 must have big maroon-colored first letters. Also strings 4-5 must have teal (#836) color.</b>
+		<b class="agent003-wavy">(5) This string must have wavy line under it. [class="agent003-wavy"]</b>
+		<b class="agent003_underlined">"This string (6) must be dashed & underlined, but not have teal color. [class="agent003_underlined"]". Notice the first letter and the doublequote are styled differently.</b>
 	</div>
 	<br>
 	<div class="task04">
