--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
 	</div>
 
 	<br>
+	<div class="task05">
+		<div class="task05-left"></div>
+		<a>Float left & float right example. If you don't see any effect, zoom in the page. Notice how the text is displayed around right block.</a>
+		<div class="task05-right"></div>
+		<br>
+		<a>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</a>
+	</div>
+	<br>
 	<div class="task06">
 		<div class="nobound"><b>Task06, variant 02</b></div>
 		<!-- Добавить на страницу список с собственным маркером (изображение, символ или сгенерированное средствами CSS). -->
